--- a/css/styles.css
+++ b/css/styles.css
@@ -70,9 +70,16 @@ body {
 }
 
 #challengeName p {
+    font-size: 12px;
+    font-style:oblique;
     width: 100%;
     text-align: center;
     color: #222;
+    height: 50px;
+    vertical-align: middle;
+    margin: 0px;
+    text-shadow: 2px 2px 3px rgba(150, 150 ,150 , 1);   
+    line-height: 50px;
 }
 
 /*****************************************************
@@ -224,7 +231,7 @@ body {
 #commandHistory {
 	width: 95%;
 	margin-left: 2.5%;
-	margin-right: 2.5;
+	margin-right: 2.5%;
 	display: inline-block;
 	font-size: inherit;
 	font-family: inherit;
