Integrate cs_console with our project && make git commands running with it

--- a/css/styles.css
+++ b/css/styles.css
@@ -242,7 +242,7 @@ body {
     width: 95%;
     display: inline-block;
     margin-left: 2.5%;
-	margin-right: 2.5;
+    margin-right: 2.5%;
     margin-top: 20px;
     margin-bottom: 20px;
 }
