--- a/css/codemirror-local.css
+++ b/css/codemirror-local.css
@@ -1,7 +1,7 @@
 .CodeMirror {
     direction: ltr;
     float: left;
-    width: 900px;
+    width: 100%;
     height: 325px;
     background-color: #424242;
 }
