--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,10 @@ body {
 	background-color: #eee;
 }
 #challengeName {
+    position: relative;
+    top: 0px;
     float: left;
-    width: 13.5%;
+    width: 14%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
