--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ body {
 #challengeName {
     position: relative;
     top: 0px;
+    left: 0px;
     float: left;
     width: 14%;
     height: 100%;
@@ -114,6 +115,9 @@ body {
 	width: 74%;
 	height: 100%;
 	float: left;
+    -moz-box-shadow: 0 0 30px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 0 30px rgba(0,0,0,0.5);
+	box-shadow: 0 0 30px rgba(0,0,0,0.5);
 }
 
 #commandLine #tips {
@@ -165,4 +169,10 @@ body {
     color:#0F0;
     margin-top: 20px;
     display:block;
+}
+
+.resultOfCommand {
+    width : 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
