--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
+* {
+    font-family: 'Droid Arabic Naskh',Tahoma,serif;
+}
 
 body {
 	margin: 0px;
 	padding: 0px;
-	background-color: #eee
+	background-color: #eee;
+    font-family: 'Droid Arabic Naskh',Tahoma,serif;
 }
 
 #pageContent {
@@ -86,6 +90,36 @@ body {
     line-height: 50px;
 }
 
+#doc-template {
+    width: 90%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#doc-template h1 {
+    margin: 10px 0px 0px 0px;
+}
+
+#doc-template p {
+    width: 75%;
+    margin: 5px 0px;
+    font-size: 16px;
+}
+
+.input-command {
+    display: inline-block;
+    height: 30px;
+    color: #4183c4;
+    font-weight: bold;
+    line-height: 30px;
+    margin-top: 10px;
+    padding: 2px 10px;
+    font-size: 22px;
+    background: #F2F2F2;
+    border-radius: 3px;
+}
+
 /*****************************************************
  *	Content 
  *****************************************************/
@@ -98,7 +132,7 @@ body {
 
 #content #documentation {
 	width: 100%;
-	height: 200px;
+	height: 300px;
 	background-color: rgb(250,250,250);
 	border: solid 1px #ddd;
 	box-shadow: 0 0 5px #ddd;
@@ -135,6 +169,8 @@ body {
 	border-radius: 3px;
 
 }
+
+
 
 /*****************************************************
  *	Footer 
