--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 #logo img {
-	width: 150px;
+    display: inline-block;
 	height: 50px;
 }
 
@@ -75,6 +75,7 @@ body {
     height: 100%;
     margin-left: auto;
     margin-right: auto;
+    display: inline-block;
 }
 
 #challengeName p {
@@ -118,6 +119,11 @@ body {
     font-size: 22px;
     background: #F2F2F2;
     border-radius: 3px;
+}
+
+.input-command:hover {
+    cursor: pointer;
+    background: #D2D2D2;
 }
 
 /*****************************************************
