--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ body {
 
 #doc-template {
     width: 90%;
-    height: 100%;
+    /*height: 100%;*/
     margin-left: auto;
     margin-right: auto;
 }
@@ -115,6 +115,7 @@ body {
     font-weight: bold;
     line-height: 30px;
     margin-top: 10px;
+    margin-bottom: 10px;
     padding: 2px 10px;
     font-size: 22px;
     background: #F2F2F2;
@@ -138,7 +139,7 @@ body {
 
 #content #documentation {
 	width: 100%;
-	height: 300px;
+	/*height: 300px;*/
 	background-color: rgb(250,250,250);
 	border: solid 1px #ddd;
 	box-shadow: 0 0 5px #ddd;
