--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,33 @@ body {
 
 }
 
+#tips #advice h4 {
+    width: 90%;
+    text-align: center;
+    border-bottom: 1px solid #DDD;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+#tips #advice ul li {
+    width: 100%;
+    list-style-type: square;
+}
+
+#tips #advice ul li a {
+    width: 100%;
+    height: 100%;
+    display: block;
+    text-decoration: none;
+    color: #555;
+}
+
+#tips #advice ul li a:hover {
+    color: #31E470;
+    text-decoration: underline;
+}
 
 /*****************************************************
  *	Footer 
